Wed Jan 12 22:52:12 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/OS_NS_stdio.h (gets):
	* ace/OS_NS_stdio.cpp (gets):

	  Removed this implementation.  While this ACE implementation of
	  gets() did not contain the security holes that all standard
	  gets() implementations have, keeping it around only serves to
	  foster confusion since (1) some may incorrectly assume that this
	  ACE-specific gets() implementation has the same holes as
	  standard ones, and (2) invoking it with a default size argument
	  so that it looks like a standard gets() call results in behavior
	  that is different from the standard.  Use fgets() instead.

	* examples/C++NPv2/Select_Reactor_Logging_Server.cpp:
	* examples/C++NPv2/Server_Shutdown.cpp:
	* examples/C++NPv2/TP_Reactor_Logging_Server.cpp:

	  Replaced all gets() calls with their fgets() counterparts.
	  gets() is evil (read insecure), and should not be used.

Wed Jan 12 14:02:03 2005  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* ace/TMCast/Group.cpp:
	* ace/TMCast/LinkListener.hpp: Called different version of
	  ACE_OS::thr_join which happens to be supported on Win32.
	  Thanks to Hruicn <huangrui@mail.cqzte.com.cn> for reporting
	  the problem and helping in narrowing it down.

Tue Jan 11 23:16:35 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* configure.ac:

	  Added test for existence of `/dev/poll' device file.  If that
	  file exists and is readable define the "ACE_HAS_DEV_POLL"
	  preprocessor symbol.

	* m4/config_h.m4:

	  Minor preprocessor symbol documentation fixes.

Tue Jan 11 22:32:47 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Dev_Poll_Reactor.cpp (remove_handler_i):

	  Release the lock during the "close" upcall.  Fixes a deadlock
	  that occurred when cancelling a timer during removal of an event
	  handler from the reactor.  Thanks to Gao Xianchao <info at
	  socks5cn dot com> for reporting the problem and confirming that
	  this change fixes the problem.
